Agrego la clase Paths, ahora se utiliza un objeto global para acceder a las rutas de los recursos. Este objeto se inicializa con una "root", si no se ingresa nada, se pone como root "../../" que era lo que veniamos usando. Este ejemplo servira para crear el objeto global de configuracion. Nombre tentativo gConfig.

--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -30,6 +30,7 @@ add_executable(	editor
 		${PROJECT_SOURCE_DIR}/src/main.cpp
 		${PROJECT_SOURCE_DIR}/src/map_game.cpp
 		${COMMON_SOURCE_DIR}/src/thread.cpp
+		${COMMON_SOURCE_DIR}/src/paths.cpp
 		${CLIENT_RESOURCES}/camera.cpp
 		${CLIENT_RESOURCES}/girder.cpp
 		${CLIENT_RESOURCES}/girder_long.cpp
@@ -45,6 +46,7 @@ add_executable(	editor
 		${CLIENT_RESOURCES}/window_game.cpp
 		${CLIENT_RESOURCES}/worm.cpp
 		${PROJECT_SOURCE_DIR}/src/map_game.h
+		${COMMON_SOURCE_DIR}/src/paths.h
 		${COMMON_SOURCE_DIR}/src/thread.h
 		${COMMON_SOURCE_DIR}/src/types.h
 		${CLIENT_RESOURCES}/camera.h
