--- a/server/map2.yml
+++ b/server/map2.yml
@@ -4,6 +4,16 @@ static:
       display: expanded # mosaic | expanded | centered
   water_level: 300
 
+  init_inventory:
+    - item_name: Bazooka 
+      supplies: 99
+    - itea_name: Grenade
+      supplies: 99
+    - itea_name: Dynamite
+      supplies: 99
+    - itea_name: Teleport
+      supplies: 99
+
   short_girders:
 
   long_girders:
@@ -37,38 +47,74 @@ static:
       angle: 0
 
 dynamic:
-  worms:
+  worms_teams:
+    - 1:
+        worms:
+          - id: 1
+            name: Worm Test
+            health: 100
+            x: 700
+            y: 0
+            status:
+              grounded: 0
+              falling: 1
+              mirrored: 0
+              walking: 0
+        inventory:
+          - item_name: Bazooka
+            supplies: 99
+          - itea_name: Grenade
+            supplies: 99
+    - 2:
+        worms:
+          - id: 2
+            name: gaby
+            health: 100
+            x: 1300
+            y: 550
+            status:
+              grounded: 0
+              falling: 1
+              mirrored: 0
+              walking: 0
+        inventory:
+          - item_name: Bazooka
+            supplies: 99
+          - itea_name: Grenade
+            supplies: 99
+    - 3:
+        worms:
+          - id: 3
+            name: bianca
+            health: 100
+            x: 1700
+            y: 550
+            status:
+              grounded: 0
+              falling: 1
+              mirrored: 0
+              walking: 0
+        inventory:
+          - item_name: Dynamite
+            supplies: 99
+          - itea_name: Teleport
+            supplies: 99
+
+  projectiles:
     - id: 1
-      team: 1
-      name: Worm Test
-      health: 100
-      x: 700
-      y: 0
-      status:
-        grounded: 0
-        falling: 1
-        mirrored: 0
-        walking: 0
-    - id: 2
-      team: 2
-      name: gaby
-      health: 100
-      x: 1300
-      y: 550
-      status:
-        grounded: 0
-        falling: 1
-        mirrored: 0
-        walking: 0
-    - id: 3
-      team: 3
-      name: bianca
-      health: 100
-      x: 1700
-      y: 550
-      status:
-        grounded: 0
-        falling: 1
-        mirrored: 0
-        walking: 0
-  
+      type: Dynamite
+      x: 1560
+      y: 1783
+      deton_time: 5
+      current_time: 2
+
+  game_status:
+    alive_teams:
+      -1
+      -2
+      -3
+    turn_timeleft: 23
+    wind:
+      intensity: 35
+      mirrored: 1
+    finished: 0
