--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -91,6 +91,8 @@ add_executable(	server
 		${PROJECT_SOURCE_DIR}/src/entities/weapons/Bat.h
 		${PROJECT_SOURCE_DIR}/src/physics/weapons/BatPhysic.cpp
 		${PROJECT_SOURCE_DIR}/src/physics/weapons/BatPhysic.h
+		${PROJECT_SOURCE_DIR}/src/entities/weapons/Teleportation.cpp
+		${PROJECT_SOURCE_DIR}/src/entities/weapons/Teleportation.h
 
 		)
 
