Implemente el dibujado de explosiones. Con radios configurables

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -56,6 +56,7 @@ add_executable(	client
 		${UI_SOURCE_DIR}/window_game.cpp
 		${UI_SOURCE_DIR}/worm.cpp
 		${UI_SOURCE_DIR}/dynamite.cpp
+		${UI_SOURCE_DIR}/explosion.cpp
 		${PROJECT_SOURCE_DIR}/src/event_sender.h
 		${PROJECT_SOURCE_DIR}/src/model_receiver.h
 		${PROJECT_SOURCE_DIR}/src/protected_dynamics.h
@@ -87,6 +88,7 @@ add_executable(	client
 		${UI_SOURCE_DIR}/window_game.h
 		${UI_SOURCE_DIR}/worm.h
 		${UI_SOURCE_DIR}/dynamite.h
+		${UI_SOURCE_DIR}/explosion.h
 		)
 
 target_link_libraries(client Qt5::Widgets Qt5::DBus)
