--- a/editor/.vscode/settings.json
+++ b/editor/.vscode/settings.json
@@ -1,24 +1,30 @@
 {
     "files.associations": {
-        "iosfwd": "cpp",
+        "vector": "cpp",
+        "qapplication": "cpp",
         "array": "cpp",
         "atomic": "cpp",
         "*.tcc": "cpp",
         "cctype": "cpp",
         "chrono": "cpp",
         "clocale": "cpp",
+        "cmath": "cpp",
+        "cstdarg": "cpp",
         "cstddef": "cpp",
         "cstdint": "cpp",
         "cstdio": "cpp",
         "cstdlib": "cpp",
-        "cstring": "cpp",
         "ctime": "cpp",
         "cwchar": "cpp",
         "cwctype": "cpp",
+        "deque": "cpp",
+        "list": "cpp",
+        "unordered_map": "cpp",
         "exception": "cpp",
         "fstream": "cpp",
         "functional": "cpp",
         "initializer_list": "cpp",
+        "iosfwd": "cpp",
         "iostream": "cpp",
         "istream": "cpp",
         "limits": "cpp",
@@ -33,11 +39,10 @@
         "streambuf": "cpp",
         "string_view": "cpp",
         "system_error": "cpp",
-        "thread": "cpp",
-        "tuple": "cpp",
+        "cinttypes": "cpp",
         "type_traits": "cpp",
+        "tuple": "cpp",
         "typeinfo": "cpp",
-        "utility": "cpp",
-        "qmessagebox": "cpp"
+        "utility": "cpp"
     }
 }
