--- a/server/snapshot_example.yml
+++ b/server/snapshot_example.yml
@@ -57,8 +57,8 @@ dynamic:
       type: Dynamite
       x: 1560
       y: 1783
-      deton_time: 5
-      current_time: 2
+      countdown: 5
+      exploded: 1
 
   game_status:
     alive_teams:
