Ahora el cliente dibuja el proyectil sin explotar, resulta que el problema era que el servidor antes le mandaba las coordenadas del proyectil con coma y ahora lo manda entero y funciona bien.

--- a/server/snapshot_example.yml
+++ b/server/snapshot_example.yml
@@ -7,6 +7,7 @@ dynamic:
           health: 100
           x: 700
           y: 0
+          sight_angle: 0
           status:
             grounded: 0
             falling: 1
@@ -24,6 +25,7 @@ dynamic:
           health: 100
           x: 1300
           y: 550
+          sight_angle: 0
           status:
             grounded: 0
             falling: 1
@@ -41,6 +43,7 @@ dynamic:
           health: 100
           x: 1700
           y: 550
+          sight_angle: 0
           status:
             grounded: 0
             falling: 1
