Modifique la estructura del inventario en el YAML para que sea clave-valor en lugar de vector (hace que el acceso sea mas facil). Ahora el editor añade el inventario inciial de cada equipo. En el execute action del world agregue la logica de descontar una munición del proyectil que se haya lanzado. No tiene que quedar asi definitivo como esta, esta feo. Cuando execute action detecte la accion de shoot, se debe hacer algo mas prolijo y ordenado, se debería chequear también si quedan municiones antes de efectuar el disparo.

--- a/server/maps/el_mapa_1.yml
+++ b/server/maps/el_mapa_1.yml
@@ -1,6 +1,6 @@
 static:
   background:
-    file: WORMS_ALTO_FONDO.jpg
+    file: ../WORMS_ALTO_FONDO.jpg
     display: mosaic
   water_level: 300
   teams_amount: 2
