--- a/server/map_example.yml
+++ b/server/map_example.yml
@@ -1,87 +1,197 @@
-static:  
+static:
   background:
-      file: ../../resources/graphics/lava_pattern.jpg
-      display: expanded # mosaic | expanded | centered
+    file: WORMS_ALTO_FONDO.jpg
+    display: mosaic
   water_level: 300
-
+  teams_amount: 2
+  worms_health: 200
   init_inventory:
-    - item_name: Bazooka 
-      supplies: 99
-    - itea_name: Grenade
-      supplies: 99
-    - itea_name: Dynamite
-      supplies: 99
-    - itea_name: Teleport
-      supplies: 99
-
+    0:
+      item_name: Bazooka
+      supplies: 999
+    1:
+      item_name: Mortar
+      supplies: 10
+    2:
+      item_name: Cluster
+      supplies: 12
+    4:
+      item_name: Banana
+      supplies: 14
+    3:
+      item_name: Grenade
+      supplies: 13
+    5:
+      item_name: Holy bomb
+      supplies: 15
+    7:
+      item_name: Dynamite
+      supplies: 16
+    6:
+      item_name: Air Strike
+      supplies: 17
+    9:
+      item_name: Teleport
+      supplies: 18
+    8:
+      item_name: Bat
+      supplies: 19
   short_girders:
-
-  long_girders:
     - id: 1
-      x: 700
-      y: 600
+      x: 458
+      y: 427
       angle: 0
     - id: 2
-      x: 900
-      y: 600
+      x: 611
+      y: 383
       angle: 0
     - id: 3
-      x: 1100
-      y: 600
+      x: 715
+      y: 432
       angle: 0
     - id: 4
-      x: 1300
-      y: 600
+      x: 922
+      y: 378
       angle: 0
-    - id: 4
-      x: 1500
-      y: 600
+    - id: 5
+      x: 1132
+      y: 424
       angle: 0
-    - id: 4
-      x: 1700
-      y: 600
+    - id: 6
+      x: 1254
+      y: 366
       angle: 0
-    - id: 4
-      x: 1900
-      y: 600
-      angle: 0
-
 dynamic:
   worms_teams:
     1:
       worms:
         - id: 1
-          name: Worm Test
-          health: 100
-          x: 700
-          y: 0
+          name: Worm 1
+          health: 200
+          x: 469
+          y: 388
+          sight_angle: 0
           status:
             grounded: 0
             falling: 1
             mirrored: 0
             walking: 0
-
+        - id: 2
+          name: Worm 2
+          health: 200
+          x: 646
+          y: 323
+          sight_angle: 0
+          status:
+            grounded: 0
+            falling: 1
+            mirrored: 0
+            walking: 0
+        - id: 3
+          name: Worm 3
+          health: 200
+          x: 708
+          y: 383
+          sight_angle: 0
+          status:
+            grounded: 0
+            falling: 1
+            mirrored: 0
+            walking: 0
+      inventory:
+        0:
+          item_name: Bazooka
+          supplies: 999
+        1:
+          item_name: Mortar
+          supplies: 10
+        2:
+          item_name: Cluster
+          supplies: 12
+        4:
+          item_name: Banana
+          supplies: 14
+        3:
+          item_name: Grenade
+          supplies: 13
+        5:
+          item_name: Holy bomb
+          supplies: 15
+        7:
+          item_name: Dynamite
+          supplies: 16
+        6:
+          item_name: Air Strike
+          supplies: 17
+        9:
+          item_name: Teleport
+          supplies: 18
+        8:
+          item_name: Bat
+          supplies: 19
     2:
       worms:
-        - id: 2
-          name: gaby
-          health: 100
-          x: 1300
-          y: 550
+        - id: 4
+          name: Worm 1
+          health: 200
+          x: 911
+          y: 339
+          sight_angle: 0
           status:
             grounded: 0
             falling: 1
             mirrored: 0
             walking: 0
-    3:
-      worms:
-        - id: 3
-          name: bianca
-          health: 100
-          x: 1700
-          y: 550
+        - id: 5
+          name: Worm 2
+          health: 200
+          x: 1134
+          y: 382
+          sight_angle: 0
           status:
             grounded: 0
             falling: 1
             mirrored: 0
             walking: 0
+        - id: 6
+          name: Worm 3
+          health: 200
+          x: 1255
+          y: 328
+          sight_angle: 0
+          status:
+            grounded: 0
+            falling: 1
+            mirrored: 0
+            walking: 0
+      inventory:
+        0:
+          item_name: Bazooka
+          supplies: 999
+        1:
+          item_name: Mortar
+          supplies: 10
+        2:
+          item_name: Cluster
+          supplies: 12
+        4:
+          item_name: Banana
+          supplies: 14
+        3:
+          item_name: Grenade
+          supplies: 13
+        5:
+          item_name: Holy bomb
+          supplies: 15
+        7:
+          item_name: Dynamite
+          supplies: 16
+        6:
+          item_name: Air Strike
+          supplies: 17
+        9:
+          item_name: Teleport
+          supplies: 18
+        8:
+          item_name: Bat
+          supplies: 19
