Creo la clase Snapshot que en el server encapsula el tratamiento que se la hace a los snapshots, haciendo que el código de World sea mas claro y limpio. Agrego a la clase Weapon el atributo type. Toda weapon al construirse, como primer miembro de la member initialization list, invoca al constructor padre Weapon() y le pasa como argumento el weapon_t que es (Ver ejemplos en dinamita, bate, teleport). Se ordena un poco la acción shoot del world.executeAction(), si no tiene municiones del arma disparada, se ignora el disparo, si tiene, ejecuta el disparo (ahora dispara siempre una dinamita, eso hay que arreglarlo @Gonza.

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -67,6 +67,8 @@ add_executable(	server
 		${PROJECT_SOURCE_DIR}/src/client_handler.h
 		${PROJECT_SOURCE_DIR}/src/snapshot_sender.cpp
 		${PROJECT_SOURCE_DIR}/src/snapshot_sender.h
+		${PROJECT_SOURCE_DIR}/src/snapshot.cpp
+		${PROJECT_SOURCE_DIR}/src/snapshot.h
 		${PROJECT_SOURCE_DIR}/src/physics/world/WaterPhysic.cpp
 		${PROJECT_SOURCE_DIR}/src/physics/world/WaterPhysic.h
 		${PROJECT_SOURCE_DIR}/src/entities/Water.cpp
