--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -61,6 +61,7 @@ add_executable(	client
 		${UI_SOURCE_DIR}/projectiles.cpp
 		${UI_SOURCE_DIR}/rectangle_text.cpp
 		${UI_SOURCE_DIR}/sight.cpp
+		${UI_SOURCE_DIR}/green_grenade.cpp
 		${PROJECT_SOURCE_DIR}/src/event_sender.h
 		${PROJECT_SOURCE_DIR}/src/model_receiver.h
 		${PROJECT_SOURCE_DIR}/src/protected_dynamics.h
@@ -97,6 +98,7 @@ add_executable(	client
 		${UI_SOURCE_DIR}/projectiles.h
 		${UI_SOURCE_DIR}/rectangle_text.h
 		${UI_SOURCE_DIR}/sight.h
+		${UI_SOURCE_DIR}/green_grenade.h
 		)
 
 target_link_libraries(client Qt5::Widgets Qt5::DBus)
