--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -62,6 +62,7 @@ add_executable(	client
 		${UI_SOURCE_DIR}/rectangle_text.cpp
 		${UI_SOURCE_DIR}/sight.cpp
 		${UI_SOURCE_DIR}/green_grenade.cpp
+		${UI_SOURCE_DIR}/holy_grenade.cpp
 		${PROJECT_SOURCE_DIR}/src/event_sender.h
 		${PROJECT_SOURCE_DIR}/src/model_receiver.h
 		${PROJECT_SOURCE_DIR}/src/protected_dynamics.h
@@ -99,6 +100,7 @@ add_executable(	client
 		${UI_SOURCE_DIR}/rectangle_text.h
 		${UI_SOURCE_DIR}/sight.h
 		${UI_SOURCE_DIR}/green_grenade.h
+		${UI_SOURCE_DIR}/holy_grenade.h
 		)
 
 target_link_libraries(client Qt5::Widgets Qt5::DBus)
