Avanzo con lobby logic.

--- a/server/lobby/CMakeLists.txt
+++ b/server/lobby/CMakeLists.txt
@@ -41,6 +41,8 @@ add_executable(	server
 		${PROJECT_SOURCE_DIR}/src/protected_matchs_status.h
 		${PROJECT_SOURCE_DIR}/src/lobby_attendant.cpp
 		${PROJECT_SOURCE_DIR}/src/lobby_attendant.h
+		${PROJECT_SOURCE_DIR}/src/waiting_game.cpp
+		${PROJECT_SOURCE_DIR}/src/waiting_game.h
 		${COMMON_SOURCE_DIR}/src/socket.cpp
 		${COMMON_SOURCE_DIR}/src/socket_error.cpp
 		${COMMON_SOURCE_DIR}/src/thread.cpp
