Implemento vista del ataque aereo, dibujado de animaciones dependientes del angulo y ataque aereo disparado con mouse. @Gonza checkear que el codigo de calculo de angulo esta repetido en Missil y Bazooka, fijarse si se puede abstraer en un metodo padre. Tambien tirar el air strike en el centro del click y no en el limite inferior izquierdo

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -66,6 +66,9 @@ add_executable(	client
 		${UI_SOURCE_DIR}/green_grenade.cpp
 		${UI_SOURCE_DIR}/holy_grenade.cpp
 		${UI_SOURCE_DIR}/shoot_power.cpp
+		${UI_SOURCE_DIR}/banana.cpp
+		${UI_SOURCE_DIR}/bazooka.cpp
+		${UI_SOURCE_DIR}/air_strike.cpp
 		${PROJECT_SOURCE_DIR}/src/event_sender.h
 		${PROJECT_SOURCE_DIR}/src/model_receiver.h
 		${PROJECT_SOURCE_DIR}/src/protected_dynamics.h
@@ -107,7 +110,9 @@ add_executable(	client
 		${UI_SOURCE_DIR}/green_grenade.h
 		${UI_SOURCE_DIR}/holy_grenade.h
 		${UI_SOURCE_DIR}/shoot_power.h
-		
+		${UI_SOURCE_DIR}/banana.h
+		${UI_SOURCE_DIR}/bazooka.h
+		${UI_SOURCE_DIR}/air_strike.h
 		)
 
 target_link_libraries(client Qt5::Widgets Qt5::DBus)
