Terminado de integrar el servidor. Compila. Crashea el LoadFile de Node en el constructor de ServerGame porque el archivo que le paso el creador es un .tar.gz, se debe descomprimir y pasarle la ruta del -yml al ServerGame.

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -34,6 +34,8 @@ add_executable(	server
 		${PROJECT_SOURCE_DIR}/src/main.cpp
 		${PROJECT_SOURCE_DIR}/src/client.cpp
 		${PROJECT_SOURCE_DIR}/src/client.h
+		${PROJECT_SOURCE_DIR}/src/server_game.cpp
+		${PROJECT_SOURCE_DIR}/src/server_game.h
 		${PROJECT_SOURCE_DIR}/src/server.cpp
 		${PROJECT_SOURCE_DIR}/src/server.h
 		${PROJECT_SOURCE_DIR}/src/server_error.cpp
