--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -71,6 +71,7 @@ add_executable(	client
 		${UI_SOURCE_DIR}/air_strike.cpp
 		${UI_SOURCE_DIR}/cluster.cpp
 		${UI_SOURCE_DIR}/wind.cpp
+		${UI_SOURCE_DIR}/teams_health.cpp
 		${PROJECT_SOURCE_DIR}/src/event_sender.h
 		${PROJECT_SOURCE_DIR}/src/model_receiver.h
 		${PROJECT_SOURCE_DIR}/src/protected_dynamics.h
@@ -117,6 +118,7 @@ add_executable(	client
 		${UI_SOURCE_DIR}/air_strike.h
 		${UI_SOURCE_DIR}/cluster.h
 		${UI_SOURCE_DIR}/wind.h
+		${UI_SOURCE_DIR}/teams_health.h
 		)
 
 target_link_libraries(client Qt5::Widgets Qt5::DBus)
