--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(COMMON_SOURCE_DIR ${PROJECT_SOURCE_DIR}/../common)
 set(UI_SOURCE_DIR ${PROJECT_SOURCE_DIR}/src/ui)
+set(VIEW_WORM_STATE_DIR ${PROJECT_SOURCE_DIR}/src/ui/worm_state)
 
 find_package(SDL2 REQUIRED)
 find_package(Qt5 COMPONENTS Widgets DBus REQUIRED)
@@ -23,11 +24,12 @@ include_directories(${COMMON_SOURCE_DIR})
 include_directories(${PROJECT_SOURCE_DIR}/src)
 include_directories(${COMMON_SOURCE_DIR}/src)
 include_directories(${UI_SOURCE_DIR})
+include_directories(${VIEW_WORM_STATE_DIR})
 include_directories(${PROJECT_SOURCE_DIR}/include)
 include_directories(${COMMON_SOURCE_DIR}/include)
 include_directories(${COMMON_SOURCE_DIR}/include/yaml-cpp)
 
-add_executable(	client
+add_executable(client 
 		${PROJECT_SOURCE_DIR}/src/main.cpp
 		${PROJECT_SOURCE_DIR}/src/event_sender.cpp
 		${PROJECT_SOURCE_DIR}/src/model_receiver.cpp
@@ -72,6 +74,9 @@ add_executable(	client
 		${UI_SOURCE_DIR}/cluster.cpp
 		${UI_SOURCE_DIR}/wind.cpp
 		${UI_SOURCE_DIR}/teams_health.cpp
+		${VIEW_WORM_STATE_DIR}/breathing.cpp
+		${VIEW_WORM_STATE_DIR}/walking.cpp
+		${VIEW_WORM_STATE_DIR}/falling.cpp
 		${PROJECT_SOURCE_DIR}/src/event_sender.h
 		${PROJECT_SOURCE_DIR}/src/model_receiver.h
 		${PROJECT_SOURCE_DIR}/src/protected_dynamics.h
@@ -119,6 +124,10 @@ add_executable(	client
 		${UI_SOURCE_DIR}/cluster.h
 		${UI_SOURCE_DIR}/wind.h
 		${UI_SOURCE_DIR}/teams_health.h
+		${VIEW_WORM_STATE_DIR}/worm_state.h
+		${VIEW_WORM_STATE_DIR}/breathing.h
+		${VIEW_WORM_STATE_DIR}/walking.h
+		${VIEW_WORM_STATE_DIR}/falling.h
 		)
 
 target_link_libraries(client Qt5::Widgets Qt5::DBus)
