Agrego vistas de cuando los gusanos mueren. Quedo chevere pero los turnos estan bugeados. Se pueden mover las tumbas a veces :wave:

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -94,6 +94,7 @@ add_executable(	client
 		${VIEW_WORM_STATE_DIR}/walking.cpp
 		${VIEW_WORM_STATE_DIR}/falling.cpp
 		${VIEW_WORM_STATE_DIR}/flying.cpp
+		${VIEW_WORM_STATE_DIR}/dead.cpp
 		${PROJECT_SOURCE_DIR}/src/event_sender.h
 		${PROJECT_SOURCE_DIR}/src/model_receiver.h
 		${PROJECT_SOURCE_DIR}/src/protected_dynamics.h
@@ -148,6 +149,7 @@ add_executable(	client
 		${VIEW_WORM_STATE_DIR}/walking.h
 		${VIEW_WORM_STATE_DIR}/falling.h
 		${VIEW_WORM_STATE_DIR}/flying.h
+		${VIEW_WORM_STATE_DIR}/dead.h
 		)
 
 target_link_libraries(client Qt5::Widgets Qt5::DBus)
