Creado map state, para poder almacenar los estados del mapa e ir cambiando a estados previos o proximos con CTRL Y y CTRL Z, actualmente consume 4% del cpu el editor

--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -45,6 +45,8 @@ add_executable(	editor
 		${PROJECT_SOURCE_DIR}/src/main.cpp
 		${PROJECT_SOURCE_DIR}/src/editor_launcher.cpp
 		${PROJECT_SOURCE_DIR}/src/editor.cpp
+		${PROJECT_SOURCE_DIR}/src/map_state.cpp
+		${PROJECT_SOURCE_DIR}/src/map_state.h
 		${PROJECT_SOURCE_DIR}/src/map_game.cpp
 		${COMMON_SOURCE_DIR}/src/thread.cpp
 		${COMMON_SOURCE_DIR}/src/paths.cpp
